Added plugins to build and package jar file